# adaptive_shooter

./: .gitignore  .travis.yaml  .travis.yml  BUILDING.md  CMakeLists.txt  FindClanLib.cmake  LICENSE  README.md  readme.markdown
.github/workflows/: cmake.yml  codeql-analysis.yml
data/: resources.xml
data/images/airplanes/: README.txt  Thumbs.db
data/images/airplanes/Multiple Views/: Thumbs.db
data/images/airplanes/Side View/: Thumbs.db
data/images/airplanes/Top View/: Thumbs.db
data/images/stepdragon/: contact.txt
data/images/stepdragon/collisiondata/: rwing_000.out  rwing_001.out  rwing_003.out  rwing_004.out  rwing_005.out  rwing_006.out
data/images/test/: menuitem_template.pdn
data/images/test/collisiondata/: enemy1_000.out  enemy2_000.out  enemy2_001.out  roundShotBig_000.out  roundShotMedium_000.out  roundShotSmall_001.out  shot.out
dependences/clanlib2.3.3/doc/html/: Core_2System_2event_8h.html  Core_2System_2event_8h__dep__incl.map  Core_2System_2event_8h__dep__incl.md5  Core_2System_2event_8h__incl.map  Core_2System_2event_8h__incl.md5  Core_2System_2event_8h_source.html  Display_2display_8h.html  Display_2display_8h__dep__incl.md5  Display_2display_8h__incl.map  Display_2display_8h__incl.md5  Display_2display_8h_source.html  Network_2NetGame_2event_8h.html  Network_2NetGame_2event_8h__dep__incl.map  Network_2NetGame_2event_8h__dep__incl.md5  Network_2NetGame_2event_8h__incl.map  Network_2NetGame_2event_8h__incl.md5  Network_2NetGame_2event_8h_source.html  RegExp_2regexp_8h.html  RegExp_2regexp_8h__dep__incl.map  RegExp_2regexp_8h__dep__incl.md5  RegExp_2regexp_8h__incl.map  RegExp_2regexp_8h__incl.md5  RegExp_2regexp_8h_source.html  Sound_2sound_8h.html  Sound_2sound_8h__dep__incl.map  Sound_2sound_8h__dep__incl.md5  Sound_2sound_8h__incl.map  Sound_2sound_8h__incl.md5  Sound_2sound_8h_source.html  accelerator__key_8h.html  accelerator__key_8h__dep__incl.map  accelerator__key_8h__dep__incl.md5  accelerator__key_8h__incl.map  accelerator__key_8h__incl.md5  accelerator__key_8h_source.html  accelerator__table_8h.html  accelerator__table_8h__dep__incl.map  accelerator__table_8h__dep__incl.md5  accelerator__table_8h__incl.md5  accelerator__table_8h_source.html  (+6393 more)
dependences/clanlib2.3.3/include/ClanLib/: core.h  csslayout.h  gui.h  network.h  regexp.h  swrender.h  vorbis.h
dependences/clanlib2.3.3/lib/Win32/: clanApp-static-mt-debug.lib  clanApp-static-mt.lib  clanCSSLayout-static-mt-debug.lib.REMOVED.git-id  clanCSSLayout-static-mt.lib.REMOVED.git-id  clanCore-static-mt-debug.lib.REMOVED.git-id  clanCore-static-mt.lib.REMOVED.git-id  clanDatabase-static-mt-debug.lib  clanDatabase-static-mt.lib  clanDisplay-static-mt-debug.lib.REMOVED.git-id  clanDisplay-static-mt.lib.REMOVED.git-id  clanGL-static-mt.lib  clanGL1-static-mt-debug.lib  clanGL1-static-mt.lib  clanGUI-static-mt-debug.lib.REMOVED.git-id  clanGUI-static-mt.lib.REMOVED.git-id  clanMikMod-static-mt-debug.lib  clanMikMod-static-mt.lib  clanRegExp-static-mt-debug.lib  clanRegExp-static-mt.lib  clanSWRender-static-mt-debug.lib  clanSWRender-static-mt.lib  clanSound-static-mt-debug.lib  clanSound-static-mt.lib  clanSqlite-static-mt-debug.lib  clanSqlite-static-mt.lib  clanVorbis-static-mt-debug.lib  clanVorbis-static-mt.lib
dependences/clanlib2.3.6/include/ClanLib/: core.h  display.h  gl1.h  sqlite.h
dependences/clanlib2.3.6/lib/Win32/: clanApp-static-mt-debug.lib  clanApp-static-mt.lib  clanCSSLayout-static-mt-debug.lib.REMOVED.git-id  clanCSSLayout-static-mt.lib.REMOVED.git-id  clanCore-static-mt-debug.lib.REMOVED.git-id  clanCore-static-mt.lib.REMOVED.git-id  clanDatabase-static-mt-debug.lib  clanDatabase-static-mt.lib  clanDisplay-static-mt-debug.lib.REMOVED.git-id  clanGL-static-mt.lib  (+18 more)
docs/: AIManager.vsd  AIManager.zargo  AdaptiveShooter.vsd  adaptiveshooter.cppcheck  aimanager.cppcheck
docs/Profiling/Dr Memory/: Results - debug run - 20120720 - 2026.txt
solution/: AdaptiveShooter.sdf.REMOVED.git-id  AdaptiveShooter.sln  CMakeLists.txt
solution/AIManager/: AIManager.vcxproj  AIManager.vcxproj.filters  CMakeLists.txt  ReadMe.txt
solution/AIManager/Debug/: AIManager.lastbuildstate
solution/AIManager_Test/: AIManager_Test.vcxproj  AIManager_Test.vcxproj.filters
solution/AdaptiveShooter/: AdaptiveShooter.vcxproj  AdaptiveShooter.vcxproj.filters  CMakeLists.txt
solution/AdaptiveShooter/Debug/: AdaptiveShooter.lastbuildstate  AdaptiveShooter_manifest.rc  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
solution/Debug/: AdaptiveShooter.ilk  AdaptiveShooter.pdb.REMOVED.git-id
solution/Outliner/: Outliner.vcxproj  Outliner.vcxproj.filters
solution/ipch/adaptiveshooter-9dcf1847/: adaptiveshooter-6682d2fe.ipch.REMOVED.git-id
src/AIManager/: AIAgent.cpp  AIAgent.h  AIManager.cpp  AIManager.h  CMakeLists.txt  PlayerModel.cpp  PlayerModel.h  Trait.h  aiagent.cpp  aiagent.h  aimanager.cpp  aimanager.h  playermodel.cpp  playermodel.h
src/AIManager_Test/: AIAgentImpl.cpp  AIAgentImpl.h  AIAgentTest.h  AIManagerTest.cpp  AIManagerTest.h  CMakeLists.txt  PlayerModelImpl.cpp  PlayerModelImpl.h  PlayerModelTest.h  main.cpp
src/AdaptiveShooter/: CMakeLists.txt  ControllerInterface.h  DynamicEntity.cpp  DynamicEntity.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Explosion.cpp  Explosion.h  FadingScene.cpp  FadingScene.h  GameManager.cpp  GameManager.h  GamepadController.cpp  GamepadController.h  KeyboardController.cpp  KeyboardController.h  Menu.cpp  Menu.h  MenuDifficulty.cpp  MenuDifficulty.h  MenuItem.cpp  MenuItem.h  Player.cpp  Player.h  PlayerModelImpl.cpp  PlayerModelImpl.h  Scene.cpp  Scene.h  Shooter.cpp  Shooter.h  Shot.cpp  Shot.h  StaticEntity.cpp  StaticEntity.h  TestEnemy.cpp  TestEnemy.h  TestEntity.cpp  TestEntity.h  (+9 more)
src/Outliner/: main.cpp
src/Scripts/: config.lua  demoscene.lua  test.lua
tools/Win32/gtest-gbar-1.2.2-release-win/: Guitar.exe.config
tools/clanlib-2.3.6/Utilities/: README.txt
(+2258 files in other folders)
